--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,10 +1,10 @@
-body {
+.backgroundLogin {
     background-color: rgb(255, 255, 255, 0.8);
-    position: absolute;
+    position: fixed;
     width: 25rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
+    padding: 30rem;
     background: url("../../../public/imagemfundo.png") no-repeat right top fixed;
 }
