--- a/src/pages/cadastro/cadastro.css
+++ b/src/pages/cadastro/cadastro.css
@@ -1,10 +1,23 @@
 .backgroundCadastro {
     background-color: rgb(255, 255, 255, 0.8);
     position: fixed;
-    width: 25rem;
+    width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 30rem;
     background: url("../../../public/imagemfundo.png") no-repeat right top fixed;
+    background-size: cover;
 }
+
+@media screen and (min-width: 1640px) {
+    .backgroundCadastro {
+      margin: 1em 2em;
+    }
+  }
+
+  @media screen and (max-width: 1076px) {
+    .backgroundCadastro {
+      margin: 1em 2em;
+    }
+  }
