--- a/src/pages/assinar-relatorio/assinar-relatorio.css
+++ b/src/pages/assinar-relatorio/assinar-relatorio.css
@@ -1,4 +1,4 @@
-.backgroundHome {
+.backgroundAssinarRelatorio {
     background-color: rgb(255, 255, 255, 0.8);
     position: fixed;
     width: 100%;
@@ -33,3 +33,8 @@
     margin: 10px 0;
   }
 }
+
+  .backgroundAssinarRelatorio {
+    height: 500px;
+    overflow-y: scroll;
+  }
