--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -5,16 +5,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 30rem;
+    padding: 480px;
     background: url("../../../public/imagemfundo.png") no-repeat right top;
     background-size: cover;
 }
 
 /* max-width  */
 @media screen and (max-width: 600px) {
-	.um {
-		background: #F9C;
-	}
 	span.lt600 {
 		display: inline-block;
 	}
@@ -22,9 +19,6 @@
 
 /* min-width */
 @media screen and (min-width: 900px) {
-	.dois {
-		background: #F90;
-	}
 	span.gt900 {
 		display: inline-block;
 	}
@@ -32,9 +26,6 @@
 
 /* min-width & max-width */
 @media screen and (min-width: 600px) and (max-width: 900px) {
-	.tres {
-		background: #9CF;
-	}
 	span.bt600-900 {
 		display: inline-block;
 	}
@@ -42,7 +33,5 @@
 
 /* max device width */
 @media screen and (max-device-width: 480px) {
-	.iphone {
-		background: #ccc;
-	}
+
 }
