--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,13 +1,13 @@
 .backgroundLogin {
     background-color: rgb(255, 255, 255, 0.8);
     position: fixed;
-    width: 150%;
+    width: 100%;
     top: 50%;
-    left: 70%;
+    left: 50%;
     transform: translate(-50%, -50%);
     padding: 480px;
     background: url("../../../public/imagemfundo.png") no-repeat right top;
-
+    background-size: cover;
 }
 
 @media only screen and (max-device-width: 900px) {
