--- a/src/pages/usuarios-cadastrados/usuarios-cadastrados.css
+++ b/src/pages/usuarios-cadastrados/usuarios-cadastrados.css
@@ -10,6 +10,12 @@
     background-size: cover;
 }
 
+img {
+  width: 10rem;
+  height: 8rem;
+  margin: -30px 0;
+}
+
 /* Desktop */
 @media only screen and (min-width: 768px) {
   body {
