--- a/src/pages/assinar-relatorio/assinar-relatorio.css
+++ b/src/pages/assinar-relatorio/assinar-relatorio.css
@@ -21,7 +21,7 @@
 /* Mobile */
 @media only screen and (max-width: 767px) {
   body {
-    width: 100%;
+    width: 70%;
   }
 
   header {
@@ -32,9 +32,13 @@
     display: block;
     margin: 10px 0;
   }
+
+  .modal-assinatura {
+    width: 80% !important;
+  }
 }
 
-  .backgroundAssinarRelatorio {
-    height: 500px;
-    overflow-y: scroll;
-  }
+.backgroundAssinarRelatorio {
+  height: 500px;
+  overflow-y: scroll;
+}
